--- a/Converter/MVVM/View/MainWindow.xaml
+++ b/Converter/MVVM/View/MainWindow.xaml
@@ -22,7 +22,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border Name="Border" BorderThickness="0" BorderBrush="DarkGray" Background="{TemplateBinding Background}">
+                        <Border Name="Border" BorderThickness="0" BorderBrush="#FF333842" Background="{TemplateBinding Background}">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -48,6 +48,11 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <Style x:Key="ArrowDownImage" TargetType="Image">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Source" Value="/MVVM/View/Images/arrow_down_dark.png"/>
+        </Style> 
     </Window.Resources>
     
     
@@ -113,7 +118,7 @@
                 
             </Grid>
             
-            <TextBox Name="CurrentFirst"                 
+            <TextBox Name="CurrencyFirst"                 
                     Grid.Row="1"                   
                     Text="0"
                     TextChanged="CurrentFirst_TextChanged"
@@ -122,16 +127,19 @@
                 <Border 
                   Grid.Row="1"
                   Height="25"
-                  Width="50"
+                  Width="55"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Center"
-                  Margin="40,0,0,0"
-                  CornerRadius="2"
-                  >
+                  Margin="35,0,0,0"
+                  CornerRadius="2">
                     
-                    <Button x:Name="FirstCurrentListButton"
+                    <Button x:Name="FirstCurrencyListButton"
                         Style="{StaticResource ComboBoxButton}">
-                    
+
+                        <Image x:Name="ArrowDownFirstCurrency"
+                               Width="11"
+                               Margin="35,0,5,0"
+                               Style="{StaticResource ArrowDownImage}"/>
                     </Button>
                     
                 </Border>            
@@ -160,7 +168,7 @@
                 </Grid>
             </Border>
 
-            <TextBox Name="CurrentSecond"               
+            <TextBox Name="CurrencySecond"               
                 Grid.Row="3"
                 Text="0"
                 VerticalAlignment="Top"
@@ -170,16 +178,19 @@
             <Border 
                   Grid.Row="3"
                   Height="25"
-                  Width="50"
+                  Width="55"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Top"
-                  Margin="40,13,0,0"
-                  CornerRadius="2"
-                  >
+                  Margin="35,13,0,0"
+                  CornerRadius="2">
                 
-                    <Button x:Name="SecondCurrentListButton" 
+                    <Button x:Name="SecondCurrencyListButton" 
                         Style="{StaticResource ComboBoxButton}">
 
+                            <Image x:Name="ArrowDownSecondCurrency"
+                                   Width="11"
+                                   Margin="35,0,5,0"
+                                   Style="{StaticResource ArrowDownImage}"/>
                     </Button>
 
             </Border>
