--- a/Converter/MVVM/View/MainWindow.xaml
+++ b/Converter/MVVM/View/MainWindow.xaml
@@ -63,8 +63,6 @@
         <Grid>            
             <Grid.RowDefinitions>
                 <RowDefinition Height="70"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="27"></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition Height="70"></RowDefinition>
             </Grid.RowDefinitions>
@@ -126,93 +124,124 @@
                 
             </Grid>
 
-            <TextBox x:Name="CurrencyFirst"                 
-                    Grid.Row="1"
-                     Text="0"
+            <Grid Name="FirstCurrencyLine"
+                  Grid.Row="1">
+                <TextBox x:Name="CurrencyFirst"                 
+                    Grid.Row="1"                    
                     Margin="5"
                     TextChanged="CurrentFirst_TextChanged"
+                    VerticalAlignment="Top"
+                             
                     Style="{StaticResource ModernTextBox}"/>
 
-            <Border 
-                  Grid.Row="1"
-                  Height="25"
-                  Width="55"
-                  HorizontalAlignment="Left"
-                  VerticalAlignment="Center"
-                  Margin="35,0,0,0"
-                  CornerRadius="2">
-                    
+                <Border 
+                      Grid.Row="1"
+                      Height="25"
+                      Width="55"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Top"
+                      Margin="35,12,0,0"
+                      CornerRadius="2">
+
                     <Button x:Name="FirstCurrencyListButton"
                         Style="{StaticResource ComboBoxButton}">
-
                         <Image x:Name="ArrowDownFirstCurrency"
                                Width="11"
                                Margin="35,0,5,0"
                                Style="{StaticResource ArrowDownImage}"/>
-                    </Button>
-                    
-                </Border>            
-
-            <Border Name="Arrow"
-                    Grid.Row="2"
-                    CornerRadius="12"
-                    Background="#353340"
-                    Width="27"
-                    Height="26">
-                <Grid>
-                    <Rectangle StrokeThickness="1"
-                               VerticalAlignment="Center"
-                               Margin="0,0,0,7"/>
-                    <Image Name="Direct"
-                           Height="19"
-                           Width="20">
-                        <Image.Style>
-                            <Style TargetType="{x:Type Image}">
-                                <Setter Property="Source" Value="Images/Down.png"/>
-                            </Style>
-                        </Image.Style>
-                        
-                    </Image>
-                </Grid>
-            </Border>
-
-            <TextBox Name="CurrencySecond"               
-                Grid.Row="3"
-                Text="0"
-                VerticalAlignment="Top"
-                Margin="5"
-                Style="{StaticResource ModernTextBox}"/>
-
-            <Border 
-                  Grid.Row="3"
-                  Height="25"
-                  Width="55"
-                  HorizontalAlignment="Left"
-                  VerticalAlignment="Top"
-                  Margin="35,13,0,0"
-                  CornerRadius="2">
+                    </Button>                   
+                </Border>
                 
+                <Polygon Fill="Black" StrokeThickness="2" 
+                         Points="0,8,
+                         0,140,
+                         140,140,
+                         140,8,
+                         50,8,
+                         42,0,
+                         34,8"
+                         Margin="36,45,74,123"/>
+                
+                <Polygon  
+                         StrokeThickness="1"
+                         Points="0,8,
+                         0,140,
+                         140,140,
+                         140,8,
+                         50,8,
+                         42,0,
+                         34,8"
+                         Margin="36,45,74,123"
+                         Stroke="#FF40454E"/>
+
+                <Border Name="Arrow"
+                        Grid.Row="1"
+                        CornerRadius="12"
+                        Background="#353340"
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Center"
+                        Margin="52"
+                        Width="27"
+                        Height="26">
+                    <Grid>
+                        <Rectangle StrokeThickness="1"
+                                   VerticalAlignment="Center"
+                                   Margin="0,0,0,7"/>
+                        <Image Name="Direct"
+                               Height="19"
+                               Width="20">
+                            <Image.Style>
+                                <Style TargetType="{x:Type Image}">
+                                    <Setter Property="Source" Value="Images/Down.png"/>
+                                </Style>
+                            </Image.Style>
+                        
+                        </Image>
+                    </Grid>
+                </Border>
+
+                  
+                <TextBox Name="CurrencySecond"               
+                    Grid.Row="1"
+                    Text="0"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Left"
+                    Margin="25,85,0,0"
+                    Style="{StaticResource ModernTextBox}"/>
+
+                <Border 
+                      Grid.Row="1"
+                      Height="25"
+                      Width="55"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Top"
+                      Margin="35,92,0,0"
+                      CornerRadius="2">
+
                     <Button x:Name="SecondCurrencyListButton" 
-                        Style="{StaticResource ComboBoxButton}">
+                            Style="{StaticResource ComboBoxButton}">
 
-                            <Image x:Name="ArrowDownSecondCurrency"
-                                   Width="11"
-                                   Margin="35,0,5,0"
-                                   Style="{StaticResource ArrowDownImage}"/>
+                        <Image x:Name="ArrowDownSecondCurrency"
+                                       Width="11"
+                                       Margin="35,0,5,0"
+                                       Style="{StaticResource ArrowDownImage}"/>
                     </Button>
+                </Border>
+            </Grid>
 
-            </Border>
-            <Border Grid.Row="4">
-                <Grid VerticalAlignment="Bottom">
-                    <Polygon Fill="White" 
-         Opacity="0.8"
-         Points="57,7,
-         65,0,
-         189,0,
-         197,7"/>
-                </Grid>
-            </Border>
-            
+            <Grid Name="BasementLine"
+                  Grid.Row="2">
+                  <Border Grid.Row="2">
+                      <Grid VerticalAlignment="Bottom">
+                          <Polygon Fill="White" 
+                                 Opacity="0.8"
+                                 Points="57,7,
+                                 65,0,
+                                 189,0,
+                                 197,7"/>
+                      </Grid>
+                  </Border>   
+            </Grid>
             
     
         </Grid>
