--- a/Converter/MVVM/View/MainWindow.xaml
+++ b/Converter/MVVM/View/MainWindow.xaml
@@ -128,7 +128,7 @@
                   Grid.Row="1">
                 <TextBox x:Name="CurrencyFirst"                 
                     Grid.Row="1"                    
-                    Margin="5"
+                    Margin="5,25,5,5"
                     TextChanged="CurrentFirst_TextChanged"
                     VerticalAlignment="Top"
                              
@@ -140,47 +140,76 @@
                       Width="55"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top"
-                      Margin="35,12,0,0"
-                      CornerRadius="2">
+                      Margin="35,32,0,0"
+                      CornerRadius="2" >
 
                     <Button x:Name="FirstCurrencyListButton"
-                        Style="{StaticResource ComboBoxButton}">
+                            Style="{StaticResource ComboBoxButton}" 
+                            MouseDown="FirstCurrencyListButton_MouseDown">
                         <Image x:Name="ArrowDownFirstCurrency"
                                Width="11"
                                Margin="35,0,5,0"
                                Style="{StaticResource ArrowDownImage}"/>
                     </Button>                   
                 </Border>
-                
-                <Polygon Fill="Black" StrokeThickness="2" 
+
+                <Grid Name="LeftGrid"
+                      Grid.Row="1">
+                <Polygon Fill="#353340" StrokeThickness="2" 
                          Points="0,8,
-                         0,140,
-                         140,140,
-                         140,8,
+                         0,100,
+                         100,100,
+                         100,8,
                          50,8,
                          42,0,
                          34,8"
-                         Margin="36,45,74,123"/>
+                         Margin="36,58,114,143"/>
                 
                 <Polygon  
                          StrokeThickness="1"
                          Points="0,8,
-                         0,140,
-                         140,140,
-                         140,8,
+                         0,100,
+                         100,100,
+                         100,8,
                          50,8,
                          42,0,
                          34,8"
-                         Margin="36,45,74,123"
+                         Margin="36,58,114,143"
                          Stroke="#FF40454E"/>
 
+                <StackPanel Orientation="Vertical"
+                            Margin="37,66,115,173">
+                    <Button Style="{StaticResource ComboBoxButton}">
+                        <TextBlock Text="EUR" 
+                                   Foreground="#CFCFCF"
+                                   TextAlignment="Left"
+                                   Height="20"/>
+                    </Button>
+                    
+                    <Button Style="{StaticResource ComboBoxButton}">
+                        <TextBlock Text="DLR" 
+                                   Foreground="#CFCFCF"
+                                   TextAlignment="Left"
+                                   Height="20"/>
+                    </Button>
+                    
+                    <Button Style="{StaticResource ComboBoxButton}">
+                        <TextBlock Text="CZK" 
+                                   Foreground="#CFCFCF"
+                                   TextAlignment="Left"
+                                   Height="20"/>
+                    </Button>
+                    
+                </StackPanel>
+                </Grid>
+                
                 <Border Name="Arrow"
                         Grid.Row="1"
                         CornerRadius="12"
                         Background="#353340"
                         VerticalAlignment="Top"
                         HorizontalAlignment="Center"
-                        Margin="52"
+                        Margin="52,200,52,52"
                         Width="27"
                         Height="26">
                     <Grid>
@@ -206,7 +235,7 @@
                     Text="0"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-                    Margin="25,85,0,0"
+                    Margin="25,255,0,0"
                     Style="{StaticResource ModernTextBox}"/>
 
                 <Border 
@@ -215,7 +244,7 @@
                       Width="55"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top"
-                      Margin="35,92,0,0"
+                      Margin="35,262,0,0"
                       CornerRadius="2">
 
                     <Button x:Name="SecondCurrencyListButton" 
