add polygones for second currency button

--- a/Converter/MVVM/View/MainWindow.xaml
+++ b/Converter/MVVM/View/MainWindow.xaml
@@ -140,7 +140,7 @@
                       Width="55"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top"
-                      Margin="35,32,0,0"
+                      Margin="35,33,0,0"
                       CornerRadius="2" >
 
                     <Button x:Name="FirstCurrencyListButton"
@@ -211,7 +211,7 @@
                         Background="#353340"
                         VerticalAlignment="Top"
                         HorizontalAlignment="Center"
-                        Margin="52,70,52,52"
+                        Margin="52,82,52,52"
                         Width="27"
                         Height="26">
                     <Grid>
@@ -231,15 +231,15 @@
                     </Grid>
                 </Border>
 
-
-                <Grid Name="SecondCurrencyLine"
-                    Grid.Row="2">
+            </Grid>
+            <Grid Name="SecondCurrencyLine"
+                    Grid.Row="1">
                     <TextBox Name="CurrencySecond"               
                     Grid.Row="1"
                     Text="0"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-                    Margin="25,105,0,0"
+                    Margin="25,128,0,0"
                     Style="{StaticResource ModernTextBox}"/>
 
                     <Border 
@@ -248,19 +248,70 @@
                       Width="55"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top"
-                      Margin="35,112,0,0"
+                      Margin="35,133,0,0"
                       CornerRadius="2">
 
                     <Button x:Name="SecondCurrencyListButton" 
                             Style="{StaticResource ComboBoxButton}">
 
                         <Image x:Name="ArrowDownSecondCurrency"
-                                       Width="20"
-                                       Margin="35,0,5,0"
-                                       Style="{StaticResource ArrowDownImage}"/>
+                               Width="20"
+                               Margin="35,0,5,0"
+                               Style="{StaticResource ArrowDownImage}"
+                               MouseDown="ArrowDownSecondCurrency_MouseDown"/>
                     </Button>
                     </Border>
                 </Grid>
+            
+            <Grid Name="RightGrid"
+                  Grid.Row="1"
+                  Visibility="Hidden">
+                <Polygon Fill="#353340"
+                         StrokeThickness="2" 
+                         Points="0,8,
+                                0,70,
+                                70,70,
+                                70,8,
+                                50,8,
+                                42,0,
+                                34,8"
+                 Margin="36,158,144,84"/>
+
+                <Polygon StrokeThickness="1"
+                         Points="0,8,
+                                 0,70,
+                                 70,70,
+                                 70,8,
+                                 50,8,
+                                 42,0,
+                                 34,8"
+                          Margin="36,158,144,84"
+                 Stroke="#FF40454E"/>
+
+                 <StackPanel Orientation="Vertical"
+                                        Margin="37,167,145,85">
+                    <Button Style="{StaticResource ComboBoxButton}">
+                                    
+                       <TextBlock Text="EUR" 
+                                  Foreground="#CFCFCF"
+                                  TextAlignment="Left"
+                                  Height="20"/>
+                    </Button>
+
+                    <Button Style="{StaticResource ComboBoxButton}">
+                        <TextBlock Text="DLR" 
+                                   Foreground="#CFCFCF"
+                                   TextAlignment="Left"
+                                   Height="20"/>
+                    </Button>
+
+                    <Button Style="{StaticResource ComboBoxButton}">
+                         <TextBlock Text="CZK" 
+                                    Foreground="#CFCFCF"
+                                    TextAlignment="Left"
+                                    Height="20"/>
+                    </Button>
+                 </StackPanel>
             </Grid>
 
             <Grid Name="BasementLine"
